@@ -1,3 +1,8 @@
+1999-02-07  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* main.c (customize_app_cb, app_drop_cb): added DnD support to open
+	files dragged to ghex.
+
 1999-02-06  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>
 
 	* ghex.desktop: Added Korean translations.
